Better - circumvented layout issues by creating popup divs dynamically. Bugs: popups still don't scroll with the page; flow has a few glitches

--- a/choice.css
+++ b/choice.css
@@ -3,7 +3,6 @@ a:visited { color:blue; }
 
 .paragraph
 {
-    display: inline;
 }
 
 .popup
